<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/newtoolbar">
        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="24dp"
            android:src="@drawable/close"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_height="24dp"/>
        <ImageView
            android:id="@+id/download"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/download" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content">
        <com.xiaopo.flying.sticker.StickerView
            android:layout_width="match_parent"
            android:id="@+id/sticker"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            app:showBorder="true"
            app:showIcons="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle_1451"
                android:id="@+id/newImageView">
            </ImageView>
        </com.xiaopo.flying.sticker.StickerView>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/unseen_layout"
            android:visibility="gone"
            layout="@layout/fragment_second"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:weightSum="4"
            android:orientation="horizontal"
            android:id="@+id/newIncludeLayout">
            <ImageView
                android:id="@+id/btn_layer"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:src="@drawable/add_layer"
                android:text="@string/Layer"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/btn_addtext"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:src="@drawable/add_txt"
                android:text="@string/add"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/btn_sticker"
                android:layout_width="wrap_content"
                android:src="@drawable/add_sticker"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:text="@string/sticker"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/btn_addphoto"
                android:layout_width="wrap_content"
                android:src="@drawable/add_photo"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:text="@string/addphoto"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>