<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    app:cardCornerRadius="5dp"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/addText_title"
            style="@style/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/gradient_bordle"
            android:gravity="center"
            android:text="@string/back_save"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addText_title" />

        <TextView
            android:id="@+id/dialog_save_photo"
            style="@style/text_base"
            android:layout_marginEnd="32.5dp"
            android:layout_width="104dp"
            android:layout_height="41.6dp"
            android:background="@drawable/gradient_bordle_btn"
            android:maxWidth="300dp"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addText_title" />

        <Button
            android:id="@+id/dialog_save_close"
            style="@style/text_base"
            android:layout_width="104dp"
            android:layout_height="45.5dp"
            android:layout_marginStart="32.5dp"
            android:layout_marginTop="31.2dp"
            android:layout_marginBottom="31.2dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addText_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>