<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dilog_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_ads"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23.4dp"
            android:background="@color/white"
            android:fontFamily="@font/helvebold"
            android:gravity="center"
            android:paddingStart="23.4dp"
            android:paddingTop="10.4dp"
            android:paddingBottom="10.4dp"
            android:text="You can access this template by watching a video ad or upgrade to PREMIUM."
            android:textColor="@color/black"
            android:textSize="19.5dp"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/btn_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23.4dp"
            android:layout_marginBottom="23.4dp"
            android:gravity="center"
            android:paddingStart="23.4dp"
            android:paddingTop="10.4dp"
            android:paddingEnd="23.4dp"
            android:paddingBottom="10.4dp"
            app:layout_constraintTop_toBottomOf="@+id/title_pre">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/tv_purchase"
                android:fontFamily="@font/helve"
                android:text="@string/open_premium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_purchase"
                android:layout_width="104dp"
                android:layout_height="39dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_bode_yellow"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_see_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23.4dp"
            android:layout_marginBottom="23.4dp"
            android:gravity="center"
            android:paddingStart="23.4dp"
            android:paddingTop="10.4dp"
            android:paddingEnd="23.4dp"
            android:paddingBottom="10.4dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_purchase">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_view"
                android:fontFamily="@font/helve"
                android:text="@string/advertised"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn_view"
                android:layout_width="104dp"
                android:layout_height="39dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_dialog"
                android:gravity="center"
                android:text="WATCH"
                android:textColor="@color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_close"
            android:text="cancel"
            android:gravity="center"
            android:fontFamily="@font/title"
            android:textColor="@color/black"
            android:textSize="23.4sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="23.4dp"
            android:background="@drawable/bg_bode_while"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_see_ads" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>